core/web/overlays/production/patches/deployment.rmv-debug.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: co-co-api
spec:
  template:
    spec:
      containers:
      - name: co-api
