core/web/overlays/production/patches/ingress.add-tls.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: co-co-api
spec:
  rules:
  - host: api.curious-outcomes.community
    http:
      paths:
      - backend:
          service:
            name: co-co-api
            port:
              number: 3000
        path: /api/?(.*)
        pathType: Prefix
  tls:
  - hosts:
    - api.curious-outcomes.community
    secretName: letsencrypt-co-secret
